fixed wrap

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     letter-spacing: .2rem;
+    margin-left: 15px;
 }
 
 h1{
@@ -13,15 +14,19 @@ h1{
     font-size: 3rem;
     font-family: 'open sans';
 }
+p{
+    margin-left: 15px;
+}
 
 h2{
     font-size: 2rem;
     padding: 0;
-    font-family: 'oswald';
+    margin-left: 15px;
+    font-family: 'open sans';
 }
 
 h3{
-    margin: 0;
+    margin: 15px;
     font-size: 2rem;
     font-family: 'oswald';
 }
@@ -32,39 +37,58 @@ h3{
 
 .row1{
     display: flex;
+    width: 100%;
 }
 
 .row1 img{
-    height: 300px;
+    /* height: 300px; */
+    height: 90%;
 }
+
+.doginfo1{
+    width: 33%;
+}
+
 .row2{
     display: flex;
+    width: 100%;
 }
 
 .row2 img{
-    height: 300px;
+    /* height: 300px; */
+    height: 90%;
+}
+
+.doginfo2{
+    width: 33%;
 }
 
 .row3{
     display: flex;
+    width:100%;
 }
 
 .row3 img{
-    height: 300px;
+    /* height: 300px; */
 }
 
+.doginfo3{
+    width: 33%;
+}
 
 .dogpics{
-    width: 500px;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-left: 15px;
+    width: 100%;
+    
 }
 
 .dog-lists{
 display: flex;
 flex-wrap: wrap;
-max-width: 400px;
 align-items: center;
 list-style: none;
+margin-left: 15px;
 padding: 0;
 font-family: 'open sans';
 
@@ -135,6 +159,8 @@ font-family: 'open sans';
 }
 
 .footer ul{
-    display: inline-flex;
+    display: flex;
+    flex-wrap: wrap;
+
 
 }
